ingress-cloudera.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: master-ing
  namespace: cloudera
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: namenode.k8s.ing
    http:
      paths:
      - path: /
        backend:
          serviceName: master-external
          servicePort: 7180
